added transition effect to equation; added colored text

--- a/normativeness-of-violence/normativeness-of-violence.html
+++ b/normativeness-of-violence/normativeness-of-violence.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Global Families Research Team">
-<meta name="dcterms.date" content="2025-12-08">
+<meta name="dcterms.date" content="2025-12-17">
 
 <title>Normativeness of Violence and Associations Between Caregiver Physical Abuse and Child Aggression</title>
 <style>
@@ -89,10 +89,10 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-overlay: grey;
---cr-narrative-text-color-sidebar: black;
+          --cr-narrative-text-color-sidebar: black;
 --cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-background-color-overlay: grey;
         }
       </style>
     
@@ -116,7 +116,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">December 8, 2025</p>
+      <p class="date">December 17, 2025</p>
     </div>
   </div>
   
@@ -155,6 +155,11 @@ div.csl-indent {
 <p>Multilevel logistic regression models examined main effects and interactions of household-level caregiver physical abuse and measures of country-level violence.</p>
 </div>
 </div>
+<div class="trigger new-trigger" data-pan-to="50%,50%" data-scale-by="2.0" data-focus-on="cr-equation">
+<div class="narrative">
+<p><span style="font-size:105px;color:#E2231A;text-align:center;">⬇️</span></p>
+</div>
+</div>
 <div class="trigger new-trigger" data-focus-on="cr-result-1">
 <div class="narrative">
 <p>The results revealed that physical abuse <span class="light-content" style="color: #FF0000;">is</span> associated with higher aggression in children.</p>
@@ -177,13 +182,13 @@ div.csl-indent {
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-other-research">
 <div class="narrative">
-<p>There is <a href="https://globalfamilies.quarto.pub/spillover-of-violence/">some evidence from other research</a> <span class="citation" data-cites="Ma2025">(<a href="#ref-Ma2025" role="doc-biblioref">Ma et al., 2025</a>)</span> that there is a pathway from higher levels of community or societal violence to physical abuse, and onward to child aggression.</p>
+<p>There is <a href="https://globalfamilies.quarto.pub/spillover-of-violence/">some evidence from other research</a> <span class="citation" data-cites="Ma2025">(<a href="#ref-Ma2025" role="doc-biblioref">Ma et al., 2025</a>)</span> that there is a <span class="light-content" style="color: #FF0000;">pathway</span> from higher levels of community or societal violence to physical abuse, and onward to child aggression.</p>
 </div>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-interventions">
 <div class="narrative">
-<p>These findings emphasize that physical abuse poses a significant threat to child development in diverse global contexts.</p>
-<p>The findings highlight the need for contextually-responsive policy interventions aimed at reducing physically abusive practices worldwide.</p>
+<p>These findings emphasize that physical abuse poses a <span class="light-content" style="color: #FF0000;">significant threat</span> to child development in <span class="light-content" style="color: #FF0000;">diverse global contexts</span>.</p>
+<p>The findings highlight the need for contextually-responsive policy <span class="light-content" style="color: #FF0000;">interventions</span> aimed at reducing physically abusive practices worldwide.</p>
 </div>
 </div>
 </div>
@@ -268,13 +273,13 @@ div.csl-indent {
 <div id="cr-MICS-countries" class="scale-to-fill sticky">
 <div class="cell">
 <div class="cell-output-display">
-<div class="plotly html-widget html-fill-item" id="htmlwidget-bcbf911e1bbb8dcb1251" style="width:100%;height:464px;"></div>
-<script type="application/json" data-for="htmlwidget-bcbf911e1bbb8dcb1251">{"x":{"visdat":{"106839fb528":["function () ","plotlyVisDat"]},"cur_data":"106839fb528","attrs":{"106839fb528":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"robinson"},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<div class="plotly html-widget html-fill-item" id="htmlwidget-56cb2912b237d769a061" style="width:100%;height:464px;"></div>
+<script type="application/json" data-for="htmlwidget-56cb2912b237d769a061">{"x":{"visdat":{"12c153c667db":["function () ","plotlyVisDat"]},"cur_data":"12c153c667db","attrs":{"12c153c667db":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20],"z":1,"text":{},"colors":"#1CABE2","hoverinfo":"text","locations":{},"showscale":false,"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"inherit":true}},"layout":{"margin":{"b":40,"l":60,"t":25,"r":10},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showframe":true,"showcoastlines":true,"showcountries":true,"showland":true,"countrycolor":"rgba(190,190,190,1)","showocean":true,"oceancolor":"white","projection":{"type":"robinson"},"landcolor":"rgba(211,211,211,1)","bgcolor":"transparent"},"plot_bgcolor":"transparent","paper_bgcolor":"transparent","scene":{"zaxis":{"title":[]}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"colorbar":{"title":"","ticklen":2},"colorscale":[["0","rgba(28,171,226,1)"],["1","rgba(28,171,226,1)"]],"showscale":false,"z":[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1],"text":["Algeria","Argentina","Bangladesh","Barbados","Belarus","Belize","Benin","Bosnia and Herzegovina","Cameroon","Central African Republic","Chad","Democratic Republic of the Congo","Republic of the Congo","Costa Rica","Cote d'Ivoire","Dominican Republic","El Salvador","Eswatini","Ghana","Guinea","Guinea Bissau","Guyana","Iraq","Jamaica","Kazakhstan","Kenya","Kosovo","Kyrgyzstan","Laos","Macedonia","Madagascar","Malawi","Mali","Mauritania","Mexico","Moldova","Mongolia","Montenegro","Nepal","Nigeria","Pakistan","Panama","Paraguay","Sao Tome and Principe","Senegal","Serbia","Sierra Leone","Somalia","St. Lucia","State of Palestine","Suriname","Thailand","The Gambia","Togo","Trinidad and Tobago","Tunisia","Turkmenistan","Ukraine","Uruguay","Vietnam","Zimbabwe"],"hoverinfo":["text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text","text"],"locations":["DZA","ARG","BGD","BRB","BLR","BLZ","BEN","BIH","CMR","CAF","TCD","COD","COG","CRI","CIV","DOM","SLV","SWZ","GHA","GIN","GNB","GUY","IRQ","JAM","KAZ","KEN",null,"KGZ","LAO","MKD","MDG","MWI","MLI","MRT","MEX","MDA","MNG","MNE","NPL","NGA","PAK","PAN","PRY","STP","SEN","SRB","SLE","SOM","LCA","PSE","SUR","THA","GMB","TGO","TTO","TUN","TKM","UKR","URY","VNM","ZWE"],"marker":{"size":10,"line":{"color":"rgba(0,0,0,1)","width":0.5}},"type":"choropleth","geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 <p>Countries in UNICEF MICS Data</p>
 </div>
 </div>
 </div>
-<div id="cr-equation" class="scale-to-fill sticky">
+<div id="cr-equation" class="sticky">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
 <p><img src="annotated-equation.png" class="img-fluid figure-img"></p>
