--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2025-11-27">
+<meta name="dcterms.date" content="2025-12-26">
 
 <title>closeread Projects</title>
 <style>
@@ -65,7 +65,7 @@ ul.task-list li input[type="checkbox"] {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 27, 2025</p>
+      <p class="date">December 26, 2025</p>
     </div>
   </div>
   
@@ -84,6 +84,7 @@ ul.task-list li input[type="checkbox"] {
 <li><a href="https://globalfamilies.quarto.pub/spillover-of-violence/">https://globalfamilies.quarto.pub/spillover-of-violence/</a></li>
 <li><a href="https://globalfamilies.quarto.pub/logarithms/">https://globalfamilies.quarto.pub/logarithms/</a> | (<a href="https://globalfamilies.quarto.pub/logarithms-simple/">simplified version</a>)</li>
 <li><a href="https://globalfamilies.quarto.pub/normativeness-of-violence/">https://globalfamilies.quarto.pub/normativeness-of-violence/</a></li>
+<li><a href="https://agrogan1.github.io/closeread/triangulation/triangulation.html">https://agrogan1.github.io/closeread/triangulation/triangulation.html</a></li>
 </ul>
 
 </main>
